data/derived/comb/progs/unify/prog5045.ml.out
Characters 66-67:
  let summed = sumList n in
                       ^
Error: This expression has type int but an expression was expected of type
         int list
